新增 MyBatis 通用 Mapper

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,8 +9,8 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.datasource.driverClassName =com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://rm-2ze9a113486izd3xoro.mysql.rds.aliyuncs.com:3306/sd-dev?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://rm-2ze7rqp79b9gh3f7uoo.mysql.rds.aliyuncs.com:3306/egg-base?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username = root
 spring.datasource.password = Egg123!@#
 mybatis.mapperLocations = classpath:mapper/*.xml
