--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ user.age=24
 logging.file=E:/springboot-log.log
 
 spring.profiles.active=dev
+
+#mapper
+mapper.mappers=com.zhengbiao.springbootlearner.common.CommonMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
