--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
-spring.redis.host=39.106.162.137
-spring.redis.password=madworld
+spring.redis.host=
+spring.redis.password=
 spring.redis.database=1
 
 spring.rabbitmq.host=localhost
@@ -10,7 +10,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://rm-2ze7rqp79b9gh3f7uoo.mysql.rds.aliyuncs.com:3306/egg-base?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username = root
-spring.datasource.password = Egg123!@#
+spring.datasource.url = 
+spring.datasource.username = 
+spring.datasource.password = 
 mybatis.mapperLocations = classpath:mapper/*.xml
